[tool.poetry]
name = "py-hugging-face"
version = "0.1.0"
description = ""
authors = ["Jonny <ji394su311203106@gmail.com>"]
readme = "README.md"
packages = [{include = "py_hugging_face"}]

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.32.0"
sentencepiece = "^0.1.99"
sacremoses = "^0.0.53"
torch = "^2.0.1"
emoji = "0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
